--- a/views/about.hbs
+++ b/views/about.hbs
@@ -5,24 +5,129 @@
                 <h1 class="big-header has-text-centered">About me</h1>
             </div>
             <div class="tile is-child has-text-centered box">
-                <p>
-                    Lorem ipsum,  dolor sit amet consectetur adipisicing elit. 
-                    Quidem incidunt quia alias eum iure facere doloribus corrupti 
-                    pariatur praesentium quibusdam beatae rem laborum dolor 
-                    repudiandae tempore voluptatum ipsum,  veniam voluptates?
-                    Praesentium omnis adipisci at in asperiores numquam,  
-                    repellendus dicta nihil magni ab architecto recusandae dolor
-                    Commodi quidem sint optio eos,  expedita enim rem esse aliquid.
-                    Ipsa nulla labore eius culpa.
-                    Lorem ipsum,  dolor sit amet consectetur adipisicing elit. 
-                    Quidem incidunt quia alias eum iure facere doloribus corrupti 
-                    pariatur praesentium quibusdam beatae rem laborum dolor 
-                    repudiandae tempore voluptatum ipsum,  veniam voluptates?
-                    Praesentium omnis adipisci at in asperiores numquam,  
-                    repellendus dicta nihil magni ab architecto recusandae dolor
-                    Commodi quidem sint optio eos,  expedita enim rem esse aliquid.
-                    Ipsa nulla labore eius culpa.
-                </p>
+                Lorem ipsum,  dolor sit amet consectetur adipisicing elit. 
+                Quidem incidunt quia alias eum iure facere doloribus corrupti 
+                pariatur praesentium quibusdam beatae rem laborum dolor 
+                repudiandae tempore voluptatum ipsum,  veniam voluptates?
+                Praesentium omnis adipisci at in asperiores numquam,  
+                repellendus dicta nihil magni ab architecto recusandae dolor
+                Commodi quidem sint optio eos,  expedita enim rem esse aliquid.
+                Ipsa nulla labore eius culpa.
+                Lorem ipsum,  dolor sit amet consectetur adipisicing elit. 
+                Quidem incidunt quia alias eum iure facere doloribus corrupti 
+                pariatur praesentium quibusdam beatae rem laborum dolor 
+                repudiandae tempore voluptatum ipsum,  veniam voluptates?
+                Praesentium omnis adipisci at in asperiores numquam,  
+                repellendus dicta nihil magni ab architecto recusandae dolor
+                Commodi quidem sint optio eos,  expedita enim rem esse aliquid.
+                Ipsa nulla labore eius culpa.Lorem ipsum,  dolor sit amet consectetur adipisicing elit. 
+                Quidem incidunt quia alias eum iure facere doloribus corrupti 
+                pariatur praesentium quibusdam beatae rem laborum dolor 
+                repudiandae tempore voluptatum ipsum,  veniam voluptates?
+                Praesentium omnis adipisci at in asperiores numquam,  
+                repellendus dicta nihil magni ab architecto recusandae dolor
+                Commodi quidem sint optio eos,  expedita enim rem esse aliquid.
+                Ipsa nulla labore eius culpa.
+                Lorem ipsum,  dolor sit amet consectetur adipisicing elit. 
+                Quidem incidunt quia alias eum iure facere doloribus corrupti 
+                pariatur praesentium quibusdam beatae rem laborum dolor 
+                repudiandae tempore voluptatum ipsum,  veniam voluptates?
+                Praesentium omnis adipisci at in asperiores numquam,  
+                repellendus dicta nihil magni ab architecto recusandae dolor
+                Commodi quidem sint optio eos,  expedita enim rem esse aliquid.
+                Ipsa nulla labore eius culpa.Lorem ipsum,  dolor sit amet consectetur adipisicing elit. 
+                Quidem incidunt quia alias eum iure facere doloribus corrupti 
+                pariatur praesentium quibusdam beatae rem laborum dolor 
+                repudiandae tempore voluptatum ipsum,  veniam voluptates?
+                Praesentium omnis adipisci at in asperiores numquam,  
+                repellendus dicta nihil magni ab architecto recusandae dolor
+                Commodi quidem sint optio eos,  expedita enim rem esse aliquid.
+                Ipsa nulla labore eius culpa.
+                Lorem ipsum,  dolor sit amet consectetur adipisicing elit. 
+                Quidem incidunt quia alias eum iure facere doloribus corrupti 
+                pariatur praesentium quibusdam beatae rem laborum dolor 
+                repudiandae tempore voluptatum ipsum,  veniam voluptates?
+                Praesentium omnis adipisci at in asperiores numquam,  
+                repellendus dicta nihil magni ab architecto recusandae dolor
+                Commodi quidem sint optio eos,  expedita enim rem esse aliquid.
+                Ipsa nulla labore eius culpa.
+                Lorem ipsum,  dolor sit amet consectetur adipisicing elit. 
+                Quidem incidunt quia alias eum iure facere doloribus corrupti 
+                pariatur praesentium quibusdam beatae rem laborum dolor 
+                repudiandae tempore voluptatum ipsum,  veniam voluptates?
+                Praesentium omnis adipisci at in asperiores numquam,  
+                repellendus dicta nihil magni ab architecto recusandae dolor
+                Commodi quidem sint optio eos,  expedita enim rem esse aliquid.
+                Ipsa nulla labore eius culpa.
+                Lorem ipsum,  dolor sit amet consectetur adipisicing elit. 
+                Quidem incidunt quia alias eum iure facere doloribus corrupti 
+                pariatur praesentium quibusdam beatae rem laborum dolor 
+                repudiandae tempore voluptatum ipsum,  veniam voluptates?
+                Praesentium omnis adipisci at in asperiores numquam,  
+                repellendus dicta nihil magni ab architecto recusandae dolor
+                Commodi quidem sint optio eos,  expedita enim rem esse aliquid.
+                Ipsa nulla labore eius culpa. Lorem ipsum,  dolor sit amet consectetur adipisicing elit. 
+                Quidem incidunt quia alias eum iure facere doloribus corrupti 
+                pariatur praesentium quibusdam beatae rem laborum dolor 
+                repudiandae tempore voluptatum ipsum,  veniam voluptates?
+                Praesentium omnis adipisci at in asperiores numquam,  
+                repellendus dicta nihil magni ab architecto recusandae dolor
+                Commodi quidem sint optio eos,  expedita enim rem esse aliquid.
+                Ipsa nulla labore eius culpa.
+                Lorem ipsum,  dolor sit amet consectetur adipisicing elit. 
+                Quidem incidunt quia alias eum iure facere doloribus corrupti 
+                pariatur praesentium quibusdam beatae rem laborum dolor 
+                repudiandae tempore voluptatum ipsum,  veniam voluptates?
+                Praesentium omnis adipisci at in asperiores numquam,  
+                repellendus dicta nihil magni ab architecto recusandae dolor
+                Commodi quidem sint optio eos,  expedita enim rem esse aliquid.
+                Ipsa nulla labore eius culpa.Lorem ipsum,  dolor sit amet consectetur adipisicing elit. 
+                Quidem incidunt quia alias eum iure facere doloribus corrupti 
+                pariatur praesentium quibusdam beatae rem laborum dolor 
+                repudiandae tempore voluptatum ipsum,  veniam voluptates?
+                Praesentium omnis adipisci at in asperiores numquam,  
+                repellendus dicta nihil magni ab architecto recusandae dolor
+                Commodi quidem sint optio eos,  expedita enim rem esse aliquid.
+                Ipsa nulla labore eius culpa.
+                Lorem ipsum,  dolor sit amet consectetur adipisicing elit. 
+                Quidem incidunt quia alias eum iure facere doloribus corrupti 
+                pariatur praesentium quibusdam beatae rem laborum dolor 
+                repudiandae tempore voluptatum ipsum,  veniam voluptates?
+                Praesentium omnis adipisci at in asperiores numquam,  
+                repellendus dicta nihil magni ab architecto recusandae dolor
+                Commodi quidem sint optio eos,  expedita enim rem esse aliquid.
+                Ipsa nulla labore eius culpa.Lorem ipsum,  dolor sit amet consectetur adipisicing elit. 
+                Quidem incidunt quia alias eum iure facere doloribus corrupti 
+                pariatur praesentium quibusdam beatae rem laborum dolor 
+                repudiandae tempore voluptatum ipsum,  veniam voluptates?
+                Praesentium omnis adipisci at in asperiores numquam,  
+                repellendus dicta nihil magni ab architecto recusandae dolor
+                Commodi quidem sint optio eos,  expedita enim rem esse aliquid.
+                Ipsa nulla labore eius culpa.
+                Lorem ipsum,  dolor sit amet consectetur adipisicing elit. 
+                Quidem incidunt quia alias eum iure facere doloribus corrupti 
+                pariatur praesentium quibusdam beatae rem laborum dolor 
+                repudiandae tempore voluptatum ipsum,  veniam voluptates?
+                Praesentium omnis adipisci at in asperiores numquam,  
+                repellendus dicta nihil magni ab architecto recusandae dolor
+                Commodi quidem sint optio eos,  expedita enim rem esse aliquid.
+                Ipsa nulla labore eius culpa.
+                Lorem ipsum,  dolor sit amet consectetur adipisicing elit. 
+                Quidem incidunt quia alias eum iure facere doloribus corrupti 
+                pariatur praesentium quibusdam beatae rem laborum dolor 
+                repudiandae tempore voluptatum ipsum,  veniam voluptates?
+                Praesentium omnis adipisci at in asperiores numquam,  
+                repellendus dicta nihil magni ab architecto recusandae dolor
+                Commodi quidem sint optio eos,  expedita enim rem esse aliquid.
+                Ipsa nulla labore eius culpa.
+                Lorem ipsum,  dolor sit amet consectetur adipisicing elit. 
+                Quidem incidunt quia alias eum iure facere doloribus corrupti 
+                pariatur praesentium quibusdam beatae rem laborum dolor 
+                repudiandae tempore voluptatum ipsum,  veniam voluptates?
+                Praesentium omnis adipisci at in asperiores numquam,  
+                repellendus dicta nihil magni ab architecto recusandae dolor
+                Commodi quidem sint optio eos,  expedita enim rem esse aliquid.
+                Ipsa nulla labore eius culpa.       
             </div>
         </div>
     </div>
