--- a/views/newProject.hbs
+++ b/views/newProject.hbs
@@ -10,7 +10,7 @@
         <div class="tile is-parent is-1">
         </div>
         <div class="tile is-parent is-vertical box center">
-            <form method="POST" action="" >
+            <form method="POST" action="/portfolio/project/new" >
                 <h2 class="bigger-font">Title:</h2>
                 <div class="tile is-child is-vertical">
                     <input class="input" name="title" type="text" value="">
@@ -18,45 +18,22 @@
                 <div style="display:block">
                     <div class="tile is-child"> 
                         <h2 class="bigger-font">Description:</h2>
-                        <input class="textarea" name="description"  value="">
-                    </div>
-                    <div class="tile is-child">
-                        <h2 class="bigger-font">Image:</h2>
-                        <form action="" method="post">
-                            <div class="file">
-                                <input class="file-input" type="file" name="imageFile">
-                                <span class="file-cta">
-                                    <span class="file-icon">
-                                        <i class="fas fa-upload"></i>
-                                    </span>
-                                    <span class="file-label">
-                                        Choose an image...
-                                    </span>
-                                </span>
-                                <label class="file-label"></label>
-                            </div>
-                        </form>
+                        <textarea name="description" class="textarea" value=""></textarea>
                     </div>
                 </div>
                 <div class="tile is-child">
-                    <h2 class="bigger-font">Upload File:</h2>
-                    <form action="" method="post">
-                        <div class="file">
-                            <input class="file-input" type="file" name="projectFile">
-                            <span class="file-cta">
-                            <span class="file-icon">
-                                <i class="fas fa-upload"></i>
+                    <h2 class="bigger-font">Link Repository:</h2>
+                    <div class="field">
+                        <p class="control has-icons-left">
+                            <input class="input" type="text" name="link">
+                            <span class="icon is-medium is-left">
+                                <i class="fab fa-github"></i>
                             </span>
-                            <span class="file-label">
-                                Choose a file…
-                            </span>
-                            </span>
-                            <label class="file-label"></label>
-                        </div>
-                    </form>
+                        </p>
+                    </div>
                 </div>
                 <div class="buttons is-right">
-                    <button class="button is-dark is-focused">Submit</button>
+                    <input class="button navbar-color" type="submit" value="Post!">
                 </div>
             </form>
         </div>
