--- a/views/post.hbs
+++ b/views/post.hbs
@@ -1,5 +1,5 @@
 <div id="post">
-    <h1 class="big-header">new blogpost</h1>
+    <h1 class="big-header">New Blogpost</h1>
     <div class="colums">
         <div class="column is-half">
             <form method="POST" action="/blog/post/new">
@@ -13,7 +13,7 @@
                         </div>
                         <div class="buttons is-right">
                             <div class="control">
-                                    <input class="button navbar-color" type="submit" value="Post!">
+                                <input class="button navbar-color" type="submit" value="Post!">
                             </div>
                         </div>
                     </div>
