can show both resources on screen

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -27,7 +27,7 @@
                 <h1 class="big-header has-text-centered">Latest Blogpost</h1>
             </div>
             <div class="tile is-child box">
-                <div class="font-color has-text-centered has-text-weight-bold">
+                <div class="font-color has-text-centered has-text-weight-bold is-size-2">
                     <a href="/blog/post/{{blogpost.id}}">{{blogpost.title}}</a>
                 </div>
                 <div class="box has-text-centered">
@@ -44,11 +44,7 @@
                     odio at, placerat quam. Pellentesque sit amet massa porttitor, sodales est et,
                     sagittis lectus. Vivamus scelerisque dui eget turpis sagittis, blandit pulvinar 
                     felis convallis. Nunc lobortis, neque et luctus finibus, orci quam iaculis tellus,
-                    sit amet tempor neque lectus eget arcu. Phasellus vel libero et ligula malesuada 
-                    accumsan. Maecenas condimentum eget massa et tincidunt. Vestibulum ante ipsum 
-                    primis in faucibus orci luctus et ultrices posuere cubilia Curae; Etiam commodo 
-                    venenatis urna, sed rhoncus leo elementum sed. Donec imperdiet nunc sodales mi 
-                    commodo condimentum.
+                    
                     
             </div>
         </div>
