all crud operations work

--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -34,6 +34,7 @@
                     <label class="messagebox">Message</label>
                     <div class="field">
                         <textarea id="message" name="message" placeholder="Enter text here:" name="text" class="textarea"></textarea>
+                        <input type="hidden" value="{{token}}" name="_csrf">
                     </div>
 
                     <div class="buttons is-right">
