--- a/views/editproject.hbs
+++ b/views/editproject.hbs
@@ -10,7 +10,7 @@
         <div class="tile is-parent is-1">
         </div>
         <div class="tile is-parent is-vertical box center">
-            <form method="POST" action="/portfolio/{{portfolio.id}}/update" >
+            <form method="POST" action="/portfolio/project/{{portfolio.id}}/update" >
                 <h2 class="bigger-font">Title:</h2>
                 <div class="tile is-child is-vertical">
                     <input class="input" name="title" type="text" value="{{portfolio.title}}" required>
