--- a/views/portfolio.hbs
+++ b/views/portfolio.hbs
@@ -26,7 +26,7 @@
                         <div class="buttons is-right">
                             <a class="button navbar-color" href="/portfolio/project/{{id}}/edit">Edit</a>
                             <div class="buttons-same-height-portfolio">
-                                <form action="/portfolio/{{id}}/delete" method="post">
+                                <form action="/portfolio/project/{{id}}/delete" method="post">
                                     <input type="submit" class="button navbar-color" value="Delete">
                                 </form>
                             </div>
