--- a/views/home.hbs
+++ b/views/home.hbs
@@ -7,7 +7,7 @@
         </div>
         <div class="tile is-parent box">
             {{#each projects}}
-                <div class="tile is-child box font-color has-text-centered ">
+                <div class="tile is-child is-4 box font-color has-text-centered ">
                     <div class="is-size-3 has-text-weight-bold">
                         <a href="/portfolio/project/{{id}}">{{title}}</a>
                     </div>
