--- a/views/notfound.hbs
+++ b/views/notfound.hbs
@@ -2,10 +2,10 @@
     <div class="tile is-ancestor navbar-color">
         <div class="tile is-parent is-vertical">
             <div class="tile is-child box">
-                <h1 class="big-header has-text-centered">Something has gone terribly wrong!</h1>
+                <h1 class="big-header has-text-centered">ERROR</h1>
             </div>
             <div class="tile is-child has-text-centered box">
-                <img src="https://d2k9vv6lxkjs4u.cloudfront.net/cache-buster-1530018603/Images/Switzerland/Blog/Inclusive%2520Systems%2520EN/image-thumb__16782__header/fail-1714367_1920.jpeg" />
+                <img src="https://www.lifewire.com/thmb/OO7CD06NAdoIwv71DgUgBiTd4ps=/768x0/filters:no_upscale():max_bytes(150000):strip_icc()/shutterstock_325494917-5a68d8403418c600190a3e1f.jpg" />
             </div>
         </div>
     </div>
