--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -9,31 +9,31 @@
             <div class = "tile is-child box">
                 <h1 class="big-header has-text-centered">Contact form</h1>
                 <form method="POST" action="/contact">
-                    <label class = "name">Name</label>
+                    <label class = "name">Name:</label>
                     <div class="field-body">
                         <div class = "field">
                             <div class = "control">
-                                <input class="input" name="firstName" type="text" placeholder="First name">
+                                <input class="input" name="firstName" type="text" placeholder="First name*" required>
                             </div>
                         </div>
                         <div class = "field">
                             <div class = "control">
-                                <input class = "input" name="lastName" type="text" placeholder="Last name">
+                                <input class = "input" name="lastName" type="text" placeholder="Last name*" required>
                             </div>                    
                         </div>
                     </div>
                     <div class="field">
-                        <label class="email">Email</label>
+                        <label class="email">*Email:</label>
                         <div class="control has-icons-left">
-                            <input class="input" name="email" type="email" placeholder="example@email.com">
+                            <input class="input" name="email" type="email" placeholder="example@email.com" required>
                             <span class="icon is-small is-left">
                                 <i class="fas fa-envelope"></i>
                             </span>
                         </div>
                     </div>
-                    <label class="messagebox">Message</label>
+                    <label class="messagebox">*Message:</label>
                     <div class="field">
-                        <textarea id="message" name="message" placeholder="Enter text here:" name="text" class="textarea"></textarea>
+                        <textarea id="message" name="message" placeholder="Enter text here:" name="text" class="textarea" required></textarea>
                         <input type="hidden" value="{{token}}" name="_csrf">
                     </div>
 
