--- a/views/newProject.hbs
+++ b/views/newProject.hbs
@@ -11,23 +11,23 @@
         </div>
         <div class="tile is-parent is-vertical box center">
             <form method="POST" action="/portfolio/project/new" >
-                <h2 class="bigger-font">Title:</h2>
+                <h2 class="bigger-font">*Title:</h2>
                 <div class="tile is-child is-vertical">
-                    <input class="input" name="title" type="text" value="">
+                    <input class="input" name="title" type="text" placeholder="write something here..." value="" required>
                 </div>
                 <div style="display:block">
                     <div class="tile is-child"> 
-                        <h2 class="bigger-font">Description:</h2>
-                        <textarea name="description" class="textarea" value=""></textarea>
+                        <h2 class="bigger-font">*Description:</h2>
+                        <textarea name="description" class="textarea" placeholder="write something here..." value="" required></textarea>
                     </div>
                 </div>
                 <div class="tile is-child">
                     <h2 class="bigger-font">Link Repository:</h2>
                     <div class="field">
                         <p class="control has-icons-left">
-                            <input class="input" type="text" name="link">
+                            <input class="input" type="text" placeholder="write something here..." name="link">
                             <span class="icon is-medium is-left">
-                                <i class="fab fa-github"></i>
+                                <i class="fas fa-link"></i>
                             </span>
                         </p>
                     </div>
